--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Free Cookies</title>
 
   <link rel="stylesheet" href="/style.css" />
   <script src="/main.js" defer></script>
@@ -12,7 +12,7 @@
 <body>
   <div id="overlay" class="overlay">
     <div class="overlay-body">
-      <p class="overlay-title">Free cookies</p>
+      <p class="overlay-title">Free cookies?</p>
       <p class="overlay-description">
         Do you want to get free cookies?
       </p>
