--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Free Cookies</title>
 
-  <link rel="stylesheet" href="/style.css" />
-  <script src="/main.js" defer></script>
+  <link rel="stylesheet" href="style.css" />
+  <script src="main.js" defer></script>
 </head>
 <body>
   <div id="overlay" class="overlay">
