--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="scare">
-    <video src="/assets/video.mp4" class="jumpscare" loop></video>
+    <video src="assets/video.mp4" class="jumpscare" loop></video>
   </div>
 </body>
 </html>
