--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Free Cookies</title>
 
   <link rel="stylesheet" href="style.css" />
-  <script src="main.js" defer></script>
+  <script src="main.js" defer></script>s
 </head>
 <body>
   <div id="overlay" class="overlay">
@@ -18,8 +18,8 @@
       </p>
 
       <div id="overlay-buttons">
-        <button class="btn accept">Accept</button>
-        <button class="btn decline">Decline</button>
+        <button class="btn accept" onclick="$jumpscare()">Accept</button>
+        <button class="btn decline" onclick="$jumpscare()">Decline</button>
       </div>
     </div>
   </div>
