--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Free Cookies</title>
 
   <link rel="stylesheet" href="style.css" />
-  <script src="main.js" defer></script>s
+  <script src="main.js" defer></script>
 </head>
 <body>
   <div id="overlay" class="overlay">
